<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pedometer</string>
    <string name="app_title">Pedometer</string>
    <string name="step_seprator">:</string>
    <string name="steps">Steps</string>
    <string name="kcal">Kcal</string>
    <string name="distance">KM</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="heart_rate">HeartRate</string>
    <string name="weight_unit">KG</string>
    <string name="height_unit">CM</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="man">Male</string>
    <string name="female">Female</string>
    <string name="confirm">Confirm</string>
    <string name="tips_for_Height">Height can not be empty!</string>
    <string name="tips_for_Weight">Weight can not be empty!</string>
    <string name="save_success">Saved successfully!</string>
    <string name="edit">Edit</string>
    <string name="next">Next</string>
    <string name="invalid_number">Invalid!</string>
    <string name="cal_unit">Kcal</string>
    <string name="calories">Calorie</string>
    <string name="coefficient">Coefficient:0.7</string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="month">Month</string>
    <string name="Date">Date</string>
    <string name="today_steps">Steps</string>
    <string name="distance1">Km</string>
    <string name="distance2">Km:</string>
    <string name="minutes">Min:</string>
    <string name="current_walk">Interval Pedometer</string>
    <string name="custom_tip">Tap begin to record the movement.</string>
    <string name="monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="lap_steps">Steps</string>
    <string name="toggle_btn" />
    <string name="default_end_time">18:00</string>
    <string name="defalut_start_time">9:00</string>
    <string name="app_name_reminder">Health Reminder</string>
    <string name="water_reminder">Drink Water</string>
    <string name="active_reminder">Sedentary Reminder</string>
    <string name="eye_reminder">Eye Exercises</string>
    <string name="medicine_reminder">Take medicine</string>
    <string name="reminder_set">Settings</string>
    <string name="sound">Sound</string>
    <string name="Vibration">Vibration</string>
    <string name="Reminder">Reminder</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End Time</string>
    <string name="drinking_times">Drink times</string>
    <string name="default_drinking_times">%dtimes</string>
    <string name="times_1">1st</string>
    <string name="times_2">2nd</string>
    <string name="times_3">3rd</string>
    <string name="times_4">4th</string>
    <string name="times_5">5th</string>
    <string name="times_6">6th</string>
    <string name="times_7">7th</string>
    <string name="times_8">8th</string>
    <string name="times_9">9th</string>
    <string name="times_10">10th</string>
    <string name="times_11">11th</string>
    <string name="times_12">12th</string>
    <string name="times_13">13th</string>
    <string name="times_14">14th</string>
    <string name="times_15">15th</string>
    <string name="times_16">16th</string>
    <string name="times_17">17th</string>
    <string name="times_18">18th</string>
    <string name="times_19">19th</string>
    <string name="times_20">20th</string>
    <string name="times_doc">:</string>
    <string name="set_time">Time Settings</string>
    <string name="finish">Done</string>
    <string name="select_times_1">1 time</string>
    <string name="select_times_2">2 times</string>
    <string name="select_times_3">3 times</string>
    <string name="select_times_4">4 times</string>
    <string name="select_times_5">5 times</string>
    <string name="select_times_6">6 times</string>
    <string name="select_times_7">7 times</string>
    <string name="select_times_8">8 times</string>
    <string name="Daily_times">Daily times</string>
    <string name="reminder_time_set">Time Settings</string>
    <string name="time_set_wrong_end">End time can not be less than the start!</string>
    <string name="time_set_wrong_start">Start time can not be larger than the end!</string>
    <string name="time_set_wrong_each">the time can not be less than the last!</string>
    <string name="time_to_drink">"It's time to drink water"</string>
    <string name="minutes_1">" min "</string>
    <string name="hour">" h "</string>
    <string name="hours">" h "</string>
    <string name="interval_time">Interval time</string>
    <string name="unit_km">km</string>
    <string name="no_history_data">None steps</string>
    <string name="sensor_x">"X:"</string>
    <string name="sensor_y">"Y:"</string>
    <string name="sensor_z">"Z:"</string>
</resources>
