<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/scroll_view" android:background="@color/white" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:divider="@android:drawable/divider_horizontal_bright" android:showDividers="middle">
        <TextView android:id="@id/water_remind" android:layout_marginTop="20.0dip" android:text="@string/water_reminder" android:drawableLeft="@drawable/water_icon" style="@style/reminder_text_style" />
        <TextView android:id="@id/active_remind" android:text="@string/active_reminder" android:drawableLeft="@drawable/active" style="@style/reminder_text_style" />
        <TextView android:id="@id/eye_reminder" android:text="@string/eye_reminder" android:drawableLeft="@drawable/eye_24" style="@style/reminder_text_style" />
        <TextView android:id="@id/medicine_reminder" android:text="@string/medicine_reminder" android:drawableLeft="@drawable/medicine" style="@style/reminder_text_style" />
        <TextView android:id="@id/reminder_set" android:text="@string/reminder_set" android:drawableLeft="@drawable/remind_settings" style="@style/reminder_text_style" />
    </LinearLayout>
</ScrollView>