<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/show_setting" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginRight="30.0dip">
            <TextView android:textSize="20.0sp" android:ellipsize="middle" android:gravity="center" android:layout_width="85.0dip" android:layout_height="wrap_content" android:minHeight="70.0dip" android:text="@string/weight" />
            <EditText android:id="@id/weight_edt" android:background="@drawable/edittext_shape" android:padding="5.0dip" android:layout_width="100.0dip" android:layout_height="50.0dip" android:layout_marginLeft="5.0dip" android:layout_weight="1.0" android:inputType="numberDecimal" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/weight_unit" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="30.0dip">
            <TextView android:textSize="20.0sp" android:ellipsize="middle" android:gravity="center" android:layout_width="85.0dip" android:layout_height="wrap_content" android:minHeight="70.0dip" android:text="@string/height" />
            <EditText android:id="@id/height_edt" android:background="@drawable/edittext_shape" android:padding="5.0dip" android:layout_width="100.0dip" android:layout_height="50.0dip" android:layout_marginLeft="5.0dip" android:layout_weight="1.0" android:inputType="numberDecimal" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/height_unit" />
        </LinearLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RadioGroup android:orientation="horizontal" android:id="@id/genda_check" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="30.0dip">
                <RadioButton android:textSize="20.0sp" android:textColor="@android:color/black" android:ellipsize="end" android:id="@id/male" android:layout_width="0.0dip" android:layout_height="wrap_content" android:checked="true" android:button="@drawable/doc_selector" android:singleLine="true" android:layout_weight="1.0" />
                <RadioButton android:textSize="20.0sp" android:textColor="@android:color/black" android:ellipsize="end" android:id="@id/female" android:layout_width="0.0dip" android:layout_height="wrap_content" android:button="@drawable/doc_selector" android:singleLine="true" android:layout_weight="1.0" />
            </RadioGroup>
            <TextView android:textSize="20.0sp" android:textColor="@android:color/black" android:ellipsize="end" android:id="@id/man_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="80.0dip" android:layout_marginTop="20.0dip" android:checked="true" android:maxWidth="80.0dip" android:text="@string/man" android:singleLine="true" />
            <TextView android:textSize="20.0sp" android:textColor="@android:color/black" android:ellipsize="end" android:id="@id/female_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="240.0dip" android:layout_marginTop="20.0dip" android:text="@string/female" android:singleLine="true" />
        </RelativeLayout>
        <Button android:ellipsize="middle" android:id="@id/confirm" android:background="@drawable/button_selector_2" android:layout_width="120.0dip" android:layout_height="40.0dip" android:layout_marginTop="15.0dip" android:text="@string/confirm" />
    </LinearLayout>
</LinearLayout>