<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/scroll_view" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="@android:drawable/divider_horizontal_bright" android:showDividers="middle">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginLeft="50.0dip" android:layout_marginRight="50.0dip">
            <TextView android:textSize="30.0sp" android:textColor="@color/gray" android:id="@id/open_all" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/Reminder" android:layout_weight="1.0" />
            <ToggleButton android:gravity="center" android:id="@id/turn_on" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:button="@drawable/toggle_btn" android:textOn="@string/toggle_btn" android:textOff="@string/toggle_btn" android:text="@string/toggle_btn" />
        </LinearLayout>
        <RelativeLayout android:id="@id/drinking_time_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" android:layout_marginRight="60.0dip">
            <TextView android:textSize="26.0sp" android:textColor="@color/gray" android:id="@id/setting_type" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/drinking_times" />
            <TextView android:textSize="26.0sp" android:id="@id/drinking_times_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/default_drinking_times" android:layout_below="@id/setting_type" />
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/edit" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/inteval_time_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" android:layout_marginRight="60.0dip">
            <TextView android:textSize="26.0sp" android:textColor="@color/gray" android:id="@id/interval" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/interval_time" />
            <TextView android:textSize="26.0sp" android:id="@id/inteval_time_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/interval" />
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/edit" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <ListView android:id="@id/drink_time_list" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="@android:drawable/divider_horizontal_bright" />
    </LinearLayout>
</ScrollView>