<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20px"
    android:gravity="center"
    android:orientation="vertical" >
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="#ff000000"
	        android:textSize="32sp"
	        android:text="@string/sensor_x"/>
	    <TextView
	        android:id="@+id/data_x"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="#ff000000"
	        android:textSize="32sp"
	        android:text="@string/sensor_x"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="#ff000000"
	        android:textSize="32sp"
	        android:text="@string/sensor_y"/>
	    <TextView
	        android:id="@+id/data_y"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="#ff000000"
	        android:textSize="32sp"
	        android:text="@string/sensor_y"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="#ff000000"
	        android:textSize="32sp"
	        android:text="@string/sensor_z"/>
	    <TextView
	        android:id="@+id/data_z"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="#ff000000"
	        android:textSize="32sp"
	        android:text="@string/sensor_z"/>
	</LinearLayout>
</LinearLayout>
